完成了黑盒测试